# token-list-builder

./: .gitignore  Cargo.toml  Lists.toml  README.md  flake.nix
.github/workflows/: lists.yml  release.yml  rust.yml
builder/: Cargo.toml  README.md
builder/src/: lists.rs  main.rs  resolvers.rs
builder/src/commands/: build.rs  mod.rs  update.rs
docs/: README-lists.md
pubkey/: Cargo.toml  README.md
pubkey/src/: lib.rs
scripts/: generate_readmes.sh
tokenlist/: Cargo.toml  README.md
tokenlist/src/: lib.rs
