[package]
name = "tokenlist"
version = "0.1.1"
description = "Parses token lists according to the token list standard."
homepage = "https://clb.exchange"
repository = "https://github.com/CLBExchange/certified-token-list"
authors = ["Dondi de la Cruz <dondi@clb.exchange>"]
license = "Apache-2.0"
edition = "2021"
keywords = ["solana", "token"]

[lib]
name = "tokenlist"
path = "src/lib.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
pubkey = { version = "^0.1", path = "../pubkey" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.79"
solana-program = "^1.13"
url = { version = "^2.2", features = ["serde"] }
